--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@resurge/no-core",
-    "version": "0.0.1",
+    "name": "@reignite/no-core",
+    "version": "0.0.3",
     "description": "Core Utility library for country level right Naming Order",
     "keywords": [
         "names",
